scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / ('@0@.svg').format(application_id),
  install_dir: decibels_datadir / 'icons' / scalable_dir
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / 'com.vixalien.decibels-symbolic.svg',
  install_dir: decibels_datadir / 'icons' / symbolic_dir
)
